IrcPublisher.java: spotbugs: avoid inefficient Integer constructor where valueOf() suffices